-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.538 2009-06-15 18:15:34 guru Exp $
-----------------------------------------------------------------------------------------

2009-06-15	pwessel
	* gmt_init.c:		Allow negative integer interval (-n) for annotating log axis; this means
				annotate every n'th power of 10.
				
2009-06-11	remko
	* gmt_nc.c:		No longer write node_offset = 0 to file (not essential, only confusing).
	* gmt_grdio.c:		GMT_grd_setregion now includes "interpolant" argument: this ensures
				enough padding (if available) from the input grid and no blank edges
				on left and/or right side of the map.
				More appropriate coding of GMT_grd_shift.
				GMT_adjust_loose_wesn now includes test on data domain (moved from main
				programs calling it).
	* gmt_support.c:	GMT_RI_prepare recoded. Possibly safer. Need to investigate if it can
				be skipped when nx and ny already set.
	* grd2xyz.c:		Area check moved to GMT_adjust_loose_wesn.
	* grdvector.c, grdrotater.c, grdview.c, grdcontour.c, grdimage.c:
				Extra argument in GMT_grd_setregion. No more subset checks needed.

2009-06-09	pwessel
	* misc/gmtdp.c:		With -m, did not write the correct multisegment header from input.

2009-06-07	jluis
	* mgd77/mgd77info.c:	Use of both printf() and internal functions that write to GMT_stdout
				seams to be incompatible on Windows. Now always use fprintf (GMT_stdout, ...)
	* mgd77/mgd77.c:	Open ascii files with fopen (and not GMT_fopen) because they are written
				with fprintf(F->fp, ...) and Windows, again, gets lost.

2009-06-07	remko
	* gmt_grdio.c:		Fixed bug in GMT_grd_setregion: longitudes were limited inward
				instead of outward. Caused white-space left and right in grdimage.

2009-06-03	pwessel
	* pscoast.c:		-C[l|r/]<fill> offers to paint river-lakes separately from lakes.
				The -A option can be used to exclude riverlakes or lakes for level 2.